Greek uppercase transforms fail for some characters https://bugs.webkit.org/show_bug.cgi?id=237953 rdar://problem/90364897

Reviewed by Chris Dumez.

Skip the fast path when uppercasing in the "el" locale.

* LayoutTests/TestExpectations: Expect more tests to pass.

* Source/WTF/wtf/text/StringImpl.cpp:
(WTF::needsTurkishCasingRules): Tweaked comment.
(WTF::needsGreekUppercasingRules): Added.
(WTF::StringImpl::convertToUppercaseWithLocale): Don't use fast path when
needsGreekUppercasingRules returns true.

Canonical link: https://commits.webkit.org/274036@main